white space and pointer fix

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,8 @@
     position: absolute;
     height: 100%;
     width: 100%;
+    top: 0;
+    left: 0;
     background-color: rgba(0,0,0,0.4);
 }
 
@@ -90,6 +92,7 @@
     position: absolute;
     margin: 0;
     padding: 0;
+    cursor: pointer;
 }
 
 .addBtn {
